--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -39,8 +39,6 @@ on:
     types: started
 
 env:
-  REPO_URL: https://github.com/openwrt/openwrt.git
-  REPO_BRANCH: master
   CONFIG_FILE: .config
   DIY_SH: diy.sh
   SSH_ACTIONS: false
@@ -51,12 +49,14 @@ env:
 
 jobs:
   build_openwrt:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
     - name: Checkout
-      uses: actions/checkout@master
+      uses: actions/checkout@v2
+      with:
+        ref: master
 
     - name: Initialization environment
       env:
@@ -66,7 +66,7 @@ jobs:
         sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d
         sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php* android*
         sudo -E apt-get update
-        sudo -E apt-get -y install diffutils build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs gcc-multilib g++-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler antlr3 gperf swig
+        sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs gcc-multilib g++-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler antlr3 gperf swig
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get clean
         sudo timedatectl set-timezone "$TZ"
@@ -77,7 +77,7 @@ jobs:
       working-directory: /workdir
       run: |
         df -hT $PWD
-        git clone --depth 2 $REPO_URL -b $REPO_BRANCH openwrt
+        git clone --depth 2 https://github.com/openwrt/openwrt.git -b openwrt-21.02 openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
         cd openwrt
         COMMIT2ID=`git log -2 --pretty=format:"%H" |sed -n '2p'`
@@ -119,7 +119,7 @@ jobs:
         git clone --depth 1 -b master https://github.com/jerrykuku/luci-theme-argon package/mycustom/luci-theme-argon
         git clone --depth 1 -b master https://github.com/garypang13/luci-theme-edge package/mycustom/luci-theme-edge
         
-        git clone --depth 1 -b master https://github.com/jerrykuku/luci-app-jd-dailybonus.git package/mycustom/luci-app-jd-dailybonus
+        TEST='git clone --depth 1 -b master https://github.com/jerrykuku/luci-app-jd-dailybonus.git package/mycustom/luci-app-jd-dailybonus'
         git clone --depth 1 -b master https://github.com/jerrykuku/luci-app-vssr.git package/mycustom/luci-app-vssr
         git clone --depth 1 -b master https://github.com/jerrykuku/lua-maxminddb.git package/mycustom/lua-maxminddb
         sed -i 's/PKG_NAME:=luci-app-vssr/PKG_NAME:=luci-app-vssr\nLUCI_PKGARCH:=all/' package/mycustom/luci-app-vssr/Makefile
@@ -138,8 +138,11 @@ jobs:
         
         mkdir -p package/network/config/firewall/patches
         wget https://raw.githubusercontent.com/coolsnowwolf/lede/master/package/network/config/firewall/patches/fullconenat.patch -q --no-check-certificate -O package/network/config/firewall/patches/9999-fullconenat.patch
-        wget https://raw.githubusercontent.com/coolsnowwolf/lede/master/package/network/services/dnsmasq/patches/900-filter-aaaa.patch -q --no-check-certificate -O package/network/services/dnsmasq/patches/900-filter-aaaa.patch
-        wget https://raw.githubusercontent.com/muziling/dnsmasq-chnroute/master/0000-Add-feature-to-support-chnroutes.patch -q --no-check-certificate -O package/network/services/dnsmasq/patches/800-Add-feature-to-support-chnroutes.patch
+        git clone --depth 1 https://github.com/pexcn-archived/luci-app-fullconenat.git package/mycustom/luci-app-fullconenat
+        [ -d package/mycustom/luci-app-fullconenat/po/zh-cn ] && mv package/mycustom/luci-app-fullconenat/po/zh-cn package/mycustom/luci-app-fullconenat/po/zh_Hans
+
+        TEST='wget https://raw.githubusercontent.com/coolsnowwolf/lede/master/package/network/services/dnsmasq/patches/900-filter-aaaa.patch -q --no-check-certificate -O package/network/services/dnsmasq/patches/900-filter-aaaa.patch'
+        TEST='wget https://raw.githubusercontent.com/muziling/dnsmasq-chnroute/master/0000-Add-feature-to-support-chnroutes.patch -q --no-check-certificate -O package/network/services/dnsmasq/patches/800-Add-feature-to-support-chnroutes.patch'
 
         cd ..
 
@@ -163,15 +166,15 @@ jobs:
         [ -d feeds/helloworld/luci-app-ssr-plus/po/zh-cn ] && mv feeds/helloworld/luci-app-ssr-plus/po/zh-cn feeds/helloworld/luci-app-ssr-plus/po/zh_Hans
         
         LATESMOSDNSVER=`curl -s "https://api.github.com/repos/IrineSistiana/mosdns/releases/latest" | awk -F '"' '/tag_name/{print $4}'|sed 's/v//'`
-        sed -i 's/PKG_VERSION:=.*/PKG_VERSION:='"${LATESMOSDNSVER}"'/g' feeds/mosdns/mosdns/Makefile
+        sed -i 's/TESTPKG_VERSION:=.*/TESTPKG_VERSION:='"${LATESMOSDNSVER}"'/g' feeds/mosdns/mosdns/Makefile
         
         wget https://raw.githubusercontent.com/coolsnowwolf/lede/master/package/lean/ddns-scripts_aliyun/update_aliyun_com.sh -q --no-check-certificate -O feeds/packages/net/ddns-scripts/files/usr/lib/ddns/update_aliyun_com.sh
         chmod +x feeds/packages/net/ddns-scripts/files/usr/lib/ddns/update_aliyun_com.sh
         echo -e '{\n\t"name": "aliyun.com",\n\t"ipv4": {\n\t\t"url": "update_aliyun_com.sh"\n\t}\n}' > feeds/packages/net/ddns-scripts/files/usr/share/ddns/default/aliyun.com.json
         sed -i 's|$(INSTALL_BIN) ./files/usr/lib/ddns/dynamic_dns_updater.sh|$(INSTALL_BIN) ./files/usr/lib/ddns/dynamic_dns_updater.sh $(1)/usr/lib/ddns\n\t$(INSTALL_BIN) ./files/usr/lib/ddns/update_aliyun_com.sh|' feeds/packages/net/ddns-scripts/Makefile
         
-        sed -i 's/PKG_VERSION:=.*/PKG_VERSION:=1.7.4.1/g' feeds/packages/net/socat/Makefile
-        sed -i 's/PKG_HASH:=.*/PKG_HASH:=3faca25614e89123dff5045680549ecef519d02e331aaf3c4f5a8f6837c675e9/g' feeds/packages/net/socat/Makefile
+        TEST="sed -i 's/PKG_VERSION:=.*/PKG_VERSION:=1.7.4.1/g' feeds/packages/net/socat/Makefile"
+        TEST="sed -i 's/PKG_HASH:=.*/PKG_HASH:=3faca25614e89123dff5045680549ecef519d02e331aaf3c4f5a8f6837c675e9/g' feeds/packages/net/socat/Makefile"
         cd ..
 
     - name: Install feeds
@@ -188,8 +191,8 @@ jobs:
         cd openwrt
         mkdir -p tools/upx
         mkdir -p tools/ucl
-        wget https://raw.githubusercontent.com/Lienol/openwrt/19.07/tools/upx/Makefile -q --no-check-certificate -O tools/upx/Makefile
-        wget https://raw.githubusercontent.com/Lienol/openwrt/19.07/tools/ucl/Makefile -q --no-check-certificate -O tools/ucl/Makefile
+        wget https://raw.githubusercontent.com/Lienol/openwrt/main/tools/upx/Makefile -q --no-check-certificate -O tools/upx/Makefile
+        wget https://raw.githubusercontent.com/Lienol/openwrt/main/tools/ucl/Makefile -q --no-check-certificate -O tools/ucl/Makefile
         sed -i '/^$(curdir)\/bison\/compile/itools-y += ucl upx\n$(curdir)/upx\/compile := $(curdir)\/ucl\/compile' tools/Makefile
         sed -i "s/option lang .*/option lang 'zh_cn' /" feeds/luci/modules/luci-base/root/etc/config/luci
         sed -i '/"luci-base"/i\\t"uci-access": {\n\t\t"description": "Grant uci write access to all configurations",\n\t\t"read": {\n\t\t\t"uci": [ "*" ]\n\t\t},\n\t\t"write": {\n\t\t\t"uci": [ "*" ]\n\t\t}\n\t},\n' feeds/luci/modules/luci-base/root/usr/share/rpcd/acl.d/luci-base.json
